--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^2.6.2",
     "ejs-lint": "^0.3.0",
     "node-fetch": "^2.6.0",
-    "mongodb": "^3.3.4"
+    "mongodb": "^3.3.4",
+    "bcrypt": "^3.0.7"
   }
 }
