--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node-fetch": "^2.6.0",
     "mongodb": "^3.3.4",
     "bcrypt": "^3.0.7",
-    "memorystore": "^1.6.1"
+    "memorystore": "^1.6.1",
+    "os-utils": "^0.0.14"
   }
 }
