--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongodb": "^3.3.4",
     "bcrypt": "^3.0.7",
     "memorystore": "^1.6.1",
-    "os-utils": "^0.0.14"
+    "os": "^0.1.1",
+    "dockerode": "^3.0.2"
   }
 }
