--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,7 +8,7 @@ http {
         proxy_set_header Host $http_host;
         proxy_set_header X-NginX-Proxy true;
 
-        proxy_pass axel-system:8080;
+        proxy_pass http://axel-system:8080;
     }
   }
   server {
@@ -20,7 +20,7 @@ http {
         proxy_set_header Host $http_host;
         proxy_set_header X-NginX-Proxy true;
 
-        proxy_pass axel-system:8080;
+        proxy_pass http://axel-system:8080;
     }
   }
 
