--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,6 +2,10 @@ events {
     worker_connections        1024;
 }
 
+upstream axel_system {
+  server axel-system:8080;
+}
+
 http {
   server {
     listen 80;
@@ -12,7 +16,7 @@ http {
         proxy_set_header Host $http_host;
         proxy_set_header X-NginX-Proxy true;
 
-        proxy_pass http://axel-system:8080;
+        proxy_pass axel_system;
     }
   }
   server {
@@ -24,7 +28,7 @@ http {
         proxy_set_header Host $http_host;
         proxy_set_header X-NginX-Proxy true;
 
-        proxy_pass http://axel-system:8080;
+        proxy_pass axel_system;
     }
   }
 
