--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -16,7 +16,7 @@ http {
         proxy_set_header Host $http_host;
         proxy_set_header X-NginX-Proxy true;
 
-        proxy_pass axel_system;
+        proxy_pass http://axel_system;
     }
   }
   server {
@@ -28,7 +28,7 @@ http {
         proxy_set_header Host $http_host;
         proxy_set_header X-NginX-Proxy true;
 
-        proxy_pass axel_system;
+        proxy_pass http://axel_system;
     }
   }
 
