--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,35 +1,39 @@
-events {
-    worker_connections        1024;
-}
+worker_processes 1;
+
+events { worker_connections 1024; }
 
 http {
-  upstream axel_system {
-    server axel-system:8080;
-  }
-  
-  server {
-    listen 80;
-    server_name axel.nexusreality.ga;
 
-    location / {
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header Host $http_host;
-        proxy_set_header X-NginX-Proxy true;
+    sendfile on;
 
-        proxy_pass http://axel_system;
+    upstream axel-system {
+        server axel-system:8080;
     }
-  }
-  server {
-    listen 80;
-    server_name test.nexusreality.ga;
 
-    location / {
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header Host $http_host;
-        proxy_set_header X-NginX-Proxy true;
-
-        proxy_pass http://axel_system;
+    server {
+        listen 80;
+        server_name axel.nexusreality.ga;
+        location / {
+            proxy_pass         http://axel-system;
+            proxy_redirect     off;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Host $server_name;
+        }
     }
-  }
+
+    server {
+        listen 80;
+        server_name test.nexusreality.ga;
+        location / {
+            proxy_pass         http://axel-system;
+            proxy_redirect     off;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Host $server_name;
+        }
+    }
 
 }
