--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "memorystore": "^1.6.1",
     "os": "^0.1.1",
     "dockerode": "^3.0.2",
-    "tarfs": "^2.0.0",
+    "tar-fs": "^2.0.0",
     "path": "^0.12.7"
   }
 }
