--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "os": "^0.1.1",
     "dockerode": "^3.0.2",
     "tar-fs": "^2.0.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "simple-git": "^1.129.0"
   }
 }
